--- a/hiv-healthcare-mobile/package.json
+++ b/hiv-healthcare-mobile/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
+    "@expo/vector-icons": "^14.1.0",
     "@react-native-community/datetimepicker": "^8.3.0",
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/native": "^7.1.9",
     "expo": "~53.0.9",
     "expo-status-bar": "~2.2.3",
+    "hiv-healthcare-mobile": "file:",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
