--- a/hiv-healthcare-mobile/package.json
+++ b/hiv-healthcare-mobile/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
     "@react-navigation/stack": "^7.3.2",
+    "date-fns": "^4.1.0",
     "expo": "~53.0.9",
     "expo-status-bar": "~2.2.3",
     "hiv-healthcare-mobile": "file:",
