--- a/hiv-healthcare-mobile/tsconfig.json
+++ b/hiv-healthcare-mobile/tsconfig.json
@@ -2,7 +2,9 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true
+    "strict": true,
+    "jsx": "react-native",
+    "esModuleInterop": true
   },
   "include": ["**/*.ts", "**/*.tsx", "react-navigation.d.ts"]
 }
