--- a/hiv-healthcare-mobile/package.json
+++ b/hiv-healthcare-mobile/package.json
@@ -10,11 +10,13 @@
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/datetimepicker": "^8.3.0",
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
     "@react-navigation/stack": "^7.3.2",
+    "axios": "^1.10.0",
     "date-fns": "^4.1.0",
     "expo": "~53.0.9",
     "expo-status-bar": "~2.2.3",
@@ -32,6 +34,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@types/jwt-decode": "^3.1.0",
     "@types/react": "~19.0.10",
     "@types/react-native-vector-icons": "^6.4.18",
     "typescript": "~5.8.3"
